[tool.poetry]
name = "orgora-0-1-1"
version = "0.1.0"
description = ""
authors = ["ğ•¯ğ–Šğ–’ğ–”ğ–“ <78769380+codegod100@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "orgora_0"}]

[tool.poetry.dependencies]
python = "^3.12"
extism = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
